# PyMetaAnalysis

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
benchmarks/: README.md  benchmark_core.py
docs/: citation.md  development.md  getting-started.md  index.md  installation.md  limitations.md  releasing.md  validation.md
docs/adr/: 0001-optional-matplotlib.md  0002-statistical-policy.md  0003-meta-regression-prediction-intervals.md
docs/guides/: binary-outcomes.md  continuous-outcomes.md  generic-effects.md  input-data.md  meta-regression.md  method-selection.md  plotting.md  provenance-reporting.md  r-interoperability.md  sensitivity-analysis.md  zero-events.md
docs/methods/: statistical-methods.md
docs/reference/: api.md  report-schema.md  results.md
docs/stylesheets/: extra.css
examples/: README.md  meta_regression.ipynb  quickstart.ipynb
src/meta_analyze/: __init__.py  api.py  binary_api.py  config.py  continuous_api.py  data.py  design_matrix.py  exceptions.py  heterogeneity.py  provenance.py  regression_api.py  regression_collinearity.py  regression_contrasts.py  regression_results.py  regression_sensitivity.py  reporting.py  results.py  sensitivity.py  subgroups.py
src/meta_analyze/effect_sizes/: __init__.py  binary.py  continuous.py
src/meta_analyze/estimators/: __init__.py  inverse_variance.py  mantel_haenszel.py  meta_regression.py  tau2.py
src/meta_analyze/plotting/: __init__.py  _utils.py  forest.py  funnel.py  regression.py  subgroup_forest.py
tests/: test_api.py  test_binary.py  test_continuous.py  test_documentation.py  test_estimators.py  test_funnel_plot.py  test_meta_regression.py  test_numerical_stability.py  test_plotting.py  test_properties.py  test_r_references.py  test_reference_results.py  test_regression_collinearity.py  test_regression_contrasts.py  test_regression_influence.py  test_regression_plotting.py  test_regression_sensitivity.py  test_release_readiness.py  test_reporting.py  test_sensitivity.py  test_subgroups.py
tests/reference/: README.md  binary_input.csv  binary_metafor.json  binary_sparse_input.csv  continuous_input.csv  continuous_metafor.json  generate_binary_metafor.R  generate_continuous_metafor.R  generate_generic_metafor.R  generate_meta_regression_collinearity_metafor.R  generate_meta_regression_contrasts_metafor.R  generate_meta_regression_influence_metafor.R  generate_meta_regression_metafor.R  generate_workflow_metafor.R  generic_input.csv  generic_metafor.json  meta_regression_boundary_input.csv  meta_regression_collinearity_metafor.json  meta_regression_contrasts_metafor.json  meta_regression_influence_metafor.json  meta_regression_input.csv  meta_regression_metafor.json  workflow_input.csv  workflow_metafor.json
tools/: check_release.py  execute_notebooks.py  inspect_distribution.py
