[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "PyMetaAnalysis"
version = "0.1.0.dev0"
description = "A pandas-first, auditable meta-analysis library for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "PyMetaAnalysis contributors" },
]
keywords = [
  "meta-analysis",
  "statistics",
  "evidence-based medicine",
  "systematic review",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
]

[tool.hatch.build]
exclude = [
  "/.coverage",
  "/.hypothesis",
  "/.mypy_cache",
  "/.pytest_cache",
  "/.ruff_cache",
  "/.venv",
  "/DESIGN.md",
  "/dist",
  "/htmlcov",
  "/site",
  "**/__pycache__",
  "**/*.pyc",
]

[project.optional-dependencies]
plot = [
  "matplotlib>=3.7",
]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pandas-stubs>=2.0",
  "ruff>=0.6",
  "scipy-stubs>=1.10",
]
test = [
  "hypothesis>=6.100",
  "matplotlib>=3.7",
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
docs = [
  "mkdocs>=1.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/meta_analyze"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["meta_analyze"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.coverage.run]
branch = true
source = ["meta_analyze"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90
