[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "PyMetaAnalysis"
dynamic = ["version"]
description = "A pandas-first, auditable meta-analysis library for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "PyMetaAnalysis contributors" },
]
maintainers = [
  { name = "Zhaobo Ding", email = "ding.zb@yahoo.com" },
]
keywords = [
  "meta-analysis",
  "statistics",
  "evidence-based medicine",
  "systematic review",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
]

[project.urls]
Documentation = "https://zhaoboding.github.io/PyMetaAnalysis/"
Source = "https://github.com/ZhaoboDing/PyMetaAnalysis"
Issues = "https://github.com/ZhaoboDing/PyMetaAnalysis/issues"
Changelog = "https://github.com/ZhaoboDing/PyMetaAnalysis/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/meta_analyze/_version.py"

[tool.hatch.build]
exclude = [
  "/.coverage",
  "/.hypothesis",
  "/.mypy_cache",
  "/.pytest_cache",
  "/.ruff_cache",
  "/.venv",
  "/DESIGN.md",
  "/dist",
  "/htmlcov",
  "/site",
  "**/__pycache__",
  "**/*.pyc",
]

[project.optional-dependencies]
plot = [
  "matplotlib>=3.7",
]
dev = [
  "actionlint-py>=1.7.12.24",
  "build>=1.2",
  "mypy>=1.10",
  "pandas-stubs>=2.0",
  "ruff>=0.6",
  "scipy-stubs>=1.10",
]
test = [
  "hypothesis>=6.100",
  "matplotlib>=3.7",
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
docs = [
  "mkdocs>=1.6",
]
notebook = [
  "ipykernel>=6.29",
  "jupyterlab>=4.0",
  "matplotlib>=3.7",
  "nbclient>=0.10",
  "nbformat>=5.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/meta_analyze"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["meta_analyze"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.coverage.run]
branch = true
source = ["meta_analyze"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90
